// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BooleanLiteral.false 1`] = `
{
  "@": {
    "end": {
      "column": 6,
      "line": 1,
      "offset": 5,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "BooleanLiteral",
  "value": false,
}
`;

exports[`BooleanLiteral.true 1`] = `
{
  "@": {
    "end": {
      "column": 5,
      "line": 1,
      "offset": 4,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "BooleanLiteral",
  "value": true,
}
`;

exports[`ListLiteral 1`] = `
{
  "@": {
    "end": {
      "column": 19,
      "line": 1,
      "offset": 18,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "expressions": [
    {
      "@": {
        "end": {
          "column": 3,
          "line": 1,
          "offset": 2,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "kind": "NumberLiteral",
      "value": 3,
    },
    {
      "@": {
        "end": {
          "column": 9,
          "line": 1,
          "offset": 8,
        },
        "start": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "kind": "BooleanLiteral",
      "value": false,
    },
    {
      "@": {
        "end": {
          "column": 18,
          "line": 1,
          "offset": 17,
        },
        "start": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
      },
      "kind": "StringLiteral",
      "value": "string",
    },
  ],
  "kind": "ListLiteral",
}
`;

exports[`ListLiteral.recursive 1`] = `
{
  "@": {
    "end": {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "expressions": [
    {
      "@": {
        "end": {
          "column": 3,
          "line": 1,
          "offset": 2,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "kind": "NumberLiteral",
      "value": 3,
    },
    {
      "@": {
        "end": {
          "column": 11,
          "line": 1,
          "offset": 10,
        },
        "start": {
          "column": 4,
          "line": 1,
          "offset": 3,
        },
      },
      "expressions": [
        {
          "@": {
            "end": {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
          },
          "kind": "BooleanLiteral",
          "value": false,
        },
      ],
      "kind": "ListLiteral",
    },
    {
      "@": {
        "end": {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
      },
      "kind": "StringLiteral",
      "value": "string",
    },
  ],
  "kind": "ListLiteral",
}
`;

exports[`MapLiteral 1`] = `
{
  "@": {
    "end": {
      "column": 21,
      "line": 1,
      "offset": 20,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "entries": [
    {
      "@": {
        "end": {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "kind": "NumberLiteral",
        "value": 3,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "kind": "ValueIdentifier",
        "value": "foo",
      },
      "kind": "NamedLiteral",
    },
    {
      "@": {
        "end": {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 20,
            "line": 1,
            "offset": 19,
          },
          "start": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
        },
        "kind": "BooleanLiteral",
        "value": false,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "kind": "ValueIdentifier",
        "value": "bar",
      },
      "kind": "NamedLiteral",
    },
  ],
  "kind": "MapLiteral",
}
`;

exports[`MapLiteral.recursive 1`] = `
{
  "@": {
    "end": {
      "column": 24,
      "line": 1,
      "offset": 23,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "entries": [
    {
      "@": {
        "end": {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 8,
            "line": 1,
            "offset": 7,
          },
          "start": {
            "column": 7,
            "line": 1,
            "offset": 6,
          },
        },
        "kind": "NumberLiteral",
        "value": 3,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "start": {
            "column": 2,
            "line": 1,
            "offset": 1,
          },
        },
        "kind": "ValueIdentifier",
        "value": "foo",
      },
      "kind": "NamedLiteral",
    },
    {
      "@": {
        "end": {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": {
          "column": 10,
          "line": 1,
          "offset": 9,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 23,
            "line": 1,
            "offset": 22,
          },
          "start": {
            "column": 15,
            "line": 1,
            "offset": 14,
          },
        },
        "entries": [
          {
            "@": {
              "end": {
                "column": 22,
                "line": 1,
                "offset": 21,
              },
              "start": {
                "column": 16,
                "line": 1,
                "offset": 15,
              },
            },
            "expression": {
              "@": {
                "end": {
                  "column": 22,
                  "line": 1,
                  "offset": 21,
                },
                "start": {
                  "column": 21,
                  "line": 1,
                  "offset": 20,
                },
              },
              "kind": "NumberLiteral",
              "value": 3,
            },
            "identifier": {
              "@": {
                "end": {
                  "column": 19,
                  "line": 1,
                  "offset": 18,
                },
                "start": {
                  "column": 16,
                  "line": 1,
                  "offset": 15,
                },
              },
              "kind": "ValueIdentifier",
              "value": "baz",
            },
            "kind": "NamedLiteral",
          },
        ],
        "kind": "MapLiteral",
      },
      "identifier": {
        "@": {
          "end": {
            "column": 13,
            "line": 1,
            "offset": 12,
          },
          "start": {
            "column": 10,
            "line": 1,
            "offset": 9,
          },
        },
        "kind": "ValueIdentifier",
        "value": "bar",
      },
      "kind": "NamedLiteral",
    },
  ],
  "kind": "MapLiteral",
}
`;

exports[`NullLiteral 1`] = `
{
  "@": {
    "end": {
      "column": 5,
      "line": 1,
      "offset": 4,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "kind": "NullLiteral",
  "value": null,
}
`;

exports[`literals 1`] = `
{
  "@": {
    "end": {
      "column": 5,
      "line": 7,
      "offset": 134,
    },
    "start": {
      "column": 0,
      "line": 2,
      "offset": 0,
    },
  },
  "kind": "Program",
  "statements": [
    {
      "@": {
        "end": {
          "column": 21,
          "line": 2,
          "offset": 21,
        },
        "start": {
          "column": 7,
          "line": 2,
          "offset": 7,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 21,
            "line": 2,
            "offset": 21,
          },
          "start": {
            "column": 17,
            "line": 2,
            "offset": 17,
          },
        },
        "kind": "NullLiteral",
        "value": null,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 14,
            "line": 2,
            "offset": 14,
          },
          "start": {
            "column": 13,
            "line": 2,
            "offset": 13,
          },
        },
        "kind": "ValueIdentifier",
        "value": "a",
      },
      "kind": "ConstantDefinition",
    },
    {
      "@": {
        "end": {
          "column": 21,
          "line": 3,
          "offset": 43,
        },
        "start": {
          "column": 7,
          "line": 3,
          "offset": 29,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 21,
            "line": 3,
            "offset": 43,
          },
          "start": {
            "column": 17,
            "line": 3,
            "offset": 39,
          },
        },
        "kind": "BooleanLiteral",
        "value": true,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 14,
            "line": 3,
            "offset": 36,
          },
          "start": {
            "column": 13,
            "line": 3,
            "offset": 35,
          },
        },
        "kind": "ValueIdentifier",
        "value": "b",
      },
      "kind": "ConstantDefinition",
    },
    {
      "@": {
        "end": {
          "column": 22,
          "line": 4,
          "offset": 66,
        },
        "start": {
          "column": 7,
          "line": 4,
          "offset": 51,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 22,
            "line": 4,
            "offset": 66,
          },
          "start": {
            "column": 17,
            "line": 4,
            "offset": 61,
          },
        },
        "kind": "BooleanLiteral",
        "value": false,
      },
      "identifier": {
        "@": {
          "end": {
            "column": 14,
            "line": 4,
            "offset": 58,
          },
          "start": {
            "column": 13,
            "line": 4,
            "offset": 57,
          },
        },
        "kind": "ValueIdentifier",
        "value": "c",
      },
      "kind": "ConstantDefinition",
    },
    {
      "@": {
        "end": {
          "column": 25,
          "line": 5,
          "offset": 92,
        },
        "start": {
          "column": 7,
          "line": 5,
          "offset": 74,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 25,
            "line": 5,
            "offset": 92,
          },
          "start": {
            "column": 17,
            "line": 5,
            "offset": 84,
          },
        },
        "kind": "StringLiteral",
        "value": "string",
      },
      "identifier": {
        "@": {
          "end": {
            "column": 14,
            "line": 5,
            "offset": 81,
          },
          "start": {
            "column": 13,
            "line": 5,
            "offset": 80,
          },
        },
        "kind": "ValueIdentifier",
        "value": "d",
      },
      "kind": "ConstantDefinition",
    },
    {
      "@": {
        "end": {
          "column": 35,
          "line": 6,
          "offset": 128,
        },
        "start": {
          "column": 7,
          "line": 6,
          "offset": 100,
        },
      },
      "expression": {
        "@": {
          "end": {
            "column": 35,
            "line": 6,
            "offset": 128,
          },
          "start": {
            "column": 17,
            "line": 6,
            "offset": 110,
          },
        },
        "expressions": [
          {
            "@": {
              "end": {
                "column": 19,
                "line": 6,
                "offset": 112,
              },
              "start": {
                "column": 18,
                "line": 6,
                "offset": 111,
              },
            },
            "kind": "NumberLiteral",
            "value": 3,
          },
          {
            "@": {
              "end": {
                "column": 25,
                "line": 6,
                "offset": 118,
              },
              "start": {
                "column": 20,
                "line": 6,
                "offset": 113,
              },
            },
            "kind": "BooleanLiteral",
            "value": false,
          },
          {
            "@": {
              "end": {
                "column": 34,
                "line": 6,
                "offset": 127,
              },
              "start": {
                "column": 26,
                "line": 6,
                "offset": 119,
              },
            },
            "kind": "StringLiteral",
            "value": "string",
          },
        ],
        "kind": "ListLiteral",
      },
      "identifier": {
        "@": {
          "end": {
            "column": 14,
            "line": 6,
            "offset": 107,
          },
          "start": {
            "column": 13,
            "line": 6,
            "offset": 106,
          },
        },
        "kind": "ValueIdentifier",
        "value": "e",
      },
      "kind": "ConstantDefinition",
    },
  ],
}
`;
